--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,2 +1,11 @@
+<h1>Welcome!</h1>
+	
+	<% if current_customer %>
+		Hi, <% current_customer.name %>
 
-
+	<%= link_to "Go jump in a lake", session_path, method: :delete %>
+	<% else %>
+	
+	<%= link_to "Sign Up!", customers_new_path if !@is_login %>
+	<%= link_to "Log In", new_sessions_path if !@is_login %>  
+	<% end %>
