--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,8 +1,13 @@
 <h1>Customers</h1>
 
 <%= form_for @customer do |f| %>
-	<%= f.text_field :email, placeholder: "your super secret email address..  we will be spamming.." %>
-	<%= f.text_field :address, placeholder: "where can i send you snail mail?" %>
-	<%= f.text_field :password, placeholder: "password ..." %>
+	<%= f.text_field :name, placeholder: "Name" %>
+	<%= f.text_field :email, placeholder: "Email Address" %>
+	<%= f.text_field :address, placeholder: "Shipping Address" %>
+	<%= f.text_field :password, placeholder: "Password" %>
+	<%= f.text_field :password_confirmation, placeholder: "Confirm Password" %>
 	<%= f.submit %>
+
+<!-- redirect to ordering page for customer -->
+
 <% end %>
