--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -3,12 +3,13 @@
 <ul>
 <% @inventories.each do |i| %>
 	<li><%= link_to i.name, edit_inventory_path(i) %>
-		<%= button_to "X", inventory_path(i), method: :delete %>
+		<%= button_to "Delete", inventory_path(i), method: :delete %>
 
 	</li>
 
 	<% end %>
 </ul>
 
-<p>Find me in app/views/inventories/index.html.erb</p>
 
+
+<%= link_to "Add To Inventory", new_inventory_path %>
