--- a/app/views/customers/home.html.erb
+++ b/app/views/customers/home.html.erb
@@ -1,14 +1,14 @@
-<h1>Customer Profile</h1>
+<h1>Hi, <%= current_customer.first_name %>!</h1>
 
 
 	
 <ul>
 
-	<li><%= link_to "Place Order", new_orders_path if !@is_login %></li>  <!-- might do w/o "if !@is_login" -->
+	<li><%= link_to "Place Order", new_orders_path %></li>  <!-- might do w/o "if !@is_login" -->
 
-	<li><%= link_to "Edit Order", edit_orders_path if !@is_login %></li>
+	<li><%= link_to "Edit Order", edit_orders_path %></li>
 
-	<li><%= link_to "Cancel Order", new_sessions_path if !@is_login %></li> 
+	<li><%= link_to "Cancel Order", new_sessions_path %></li> 
 
 </ul>
 
