--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,13 +1,25 @@
 <h1>Customers</h1>
 
+<% if @customer.errors.any? %>  <!--Tyr to place error messages inside form. Hipchat if you get it -->
+
+	<% @customer.errors.full_messages.each do |value| %>	
+		<div class="alert alert-danger" role="alert">
+			<%= value %>
+		</div>
+	<% end %>
+		
+
+<% end %> 
+
+
 <%= form_for @customer do |f| %>
-	<%= f.text_field :name, placeholder: "Name" %>
+	<%= f.text_field :first_name, placeholder: "First Name" %>
+	<%= f.text_field :last_name, placeholder: "Last Name" %>
 	<%= f.text_field :email, placeholder: "Email Address" %>
 	<%= f.text_field :address, placeholder: "Shipping Address" %>
 	<%= f.text_field :password, placeholder: "Password" %>
 	<%= f.text_field :password_confirmation, placeholder: "Confirm Password" %>
 	<%= f.submit %>
 
-<!-- redirect to ordering page for customer -->
 
 <% end %>
