--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -12,4 +12,6 @@
 
 
 
-<%= link_to "Add To Inventory", new_inventory_path %>
+<%= link_to "Add To inventory", new_inventory_path %> /
+
+<%= link_to "Back to home", home_customers_path %>
