--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Welcome!</h1>
-	
+<style type="text/css">
+	body {
+		background-color: #FFC0CB;
+	}
+</style>
+
+
+<!-- Nothing is supposed to be here. Maybe a professional logo in the future-->
+<h1>Welcome</h1>
