--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,3 +1,9 @@
+<style type="text/css">
+  body {
+    background-color: #FFC0CB;
+  }
+</style>
+
 <h1>Customers</h1>
 
 <% if @customer.errors.any? %>  <!--Tyr to place error messages inside form. Hipchat if you get it -->
@@ -12,14 +18,46 @@
 <% end %> 
 
 
-<%= form_for @customer do |f| %>
-	<%= f.text_field :first_name, placeholder: "First Name" %>
-	<%= f.text_field :last_name, placeholder: "Last Name" %>
-	<%= f.text_field :email, placeholder: "Email Address" %>
-	<%= f.text_field :address, placeholder: "Shipping Address" %>
-	<%= f.text_field :password, placeholder: "Password" %>
-	<%= f.text_field :password_confirmation, placeholder: "Confirm Password" %>
-	<%= f.submit %>
+<!-- Button trigger modal -->
+<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+  Create Profile
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">A little about yourself...</h4>
+      </div>
+      <div class="modal-body">
 
 
-<% end %>
+<!-- <div class="form-group col-md-4"> -->
+
+	<%= form_for @customer do |f| %>
+		<%= f.text_field :first_name, placeholder: "First Name", class: "form-control" %>
+		<%= f.text_field :last_name, placeholder: "Last Name", class: "form-control" %>
+		<%= f.text_field :email, placeholder: "Email Address", class: "form-control" %>
+		<%= f.text_field :address, placeholder: "Shipping Address", class: "form-control" %>
+		<%= f.text_field :password, placeholder: "Password", class: "form-control" %>
+		<%= f.text_field :password_confirmation, placeholder: "Confirm Password", class: "form-control" %>
+		</br>
+    <%= f.submit %>
+
+<!-- </div> -->
+
+    </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <!-- <button type="button" class="btn btn-primary"></button> -->
+      </div>
+    </div>
+  </div>
+</div>
+
+  <% end %>
+
+<%= link_to "Back to home", home_customers_path %>
+
