--- a/app/views/inventories/new.html.erb
+++ b/app/views/inventories/new.html.erb
@@ -2,10 +2,13 @@
 
 
 <%= form_for @inventory do |f| %>
- <%= f.text_field :name, placeholder: "Kringle Flavor"%>
- <%= f.text_field :qty_on_hand, placeholder: "Quantity" %>
+ 
+ <%= f.select :name, ['Almond', 'Raspberry', 'Apricot'], placeholder: "Flavor" %>
+ <%= f.number_field :qty_on_hand, placeholder: "Quantity" %>
  <%= f.submit %>
-<%= form_for @inventory do |f| %>
-  hello <%= f.check_box :subscribe, {checked: true} %>
-  <% end %>
+ <%= form_for @inventory do |f| %>
+
+<% end %>
+
+
 <% end %>
