--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,1 +1,9 @@
+<style type="text/css">
+	body {
+		background-color: #5BC0DE;
+	}
+</style>
+
 <h1>Edit</h1>
+
+<%= link_to "Back to home", home_customers_path %>
