precompiled assests locally. project time.

--- a/app/views/customers/home.html.erb
+++ b/app/views/customers/home.html.erb
@@ -1,11 +1,8 @@
 
 <style type="text/css">
-	
-	body {
-		background-image:url('/assets/logo.jpg');
-		background-repeat: no-repeat;
-		background-size: cover;
 
+	body {
+		background-color: #FFC0CB;
 	}	
 
 	h1 {
