--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,6 +1,14 @@
 <style type="text/css">
+	
 	body {
-		background-color: #FFC0CB;
+		background-image:url('/assets/logo.jpg');
+		background-repeat: no-repeat;
+		background-size: cover;
+
+	}
+
+	h1 {
+		color: white;
 	}
 </style>
 
