--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -14,4 +14,4 @@
 
 
 <!-- Nothing is supposed to be here. Maybe a professional logo in the future-->
-<h1>Welcome</h1>
+<h1>Kirsten's Danish Bakery</h1>
